added dynamic variant fetching in api
