# app/Http/Controllers/Api/RetailerOrderController.php
@@ -115,7 +115,8 @@ class RetailerOrderController extends Controller
      *             @OA\Property(property="product_id", type="integer"),
      *             @OA\Property(property="product_name", type="string"),
      *             @OA\Property(property="has_variants", type="boolean"),
-     *             @OA\Property(property="variant", type="string", nullable=true),
+     *             @OA\Property(property="available_variants", type="array", @OA\Items(type="string")),
+     *             @OA\Property(property="selected_variant", type="string", nullable=true),
      *             @OA\Property(property="input_quantity", type="number"),
      *             @OA\Property(property="input_unit", type="string"),
      *             @OA\Property(property="total_quantity_strips", type="integer"),
